feat(security): implement RBAC with ROLE_USER and ROLE_ADMIN